   now resolved via AbstractedFS methods instead of in format_list().

 * Issue 129: added 3 new callbacks to FTPHandler class: 
   on_incomplete_file_sent(), on_incomplete_file_received() and on_login().

 * Issue 130: added UnixAuthorizer and WindowsAuthorizer classes defined in the
   new pyftpdlib.contrib.authorizers module.

Bugfixes:

 * Issue #120: an ActiveDTP() instance is not garbage collected in case a
   client issuing PORT disconnects before establishing the data connection.

 * Issue #122: a wrong variable name was used in AbstractedFS.validpath method.

 * Issue #123: PORT command doesn't bind to correct address in case an alias
   is created for the local network interface.

API changes since 0.5.2:

 * FTPHandler.use_gmt_times attribute has been added.

 * FTPHandler.data_server attribute renamed in FTPHandler._dtp_acceptor.

 * FTPHandler.proto_cmds attribute has been added.  The FTPHandler class no
   longer relies on "ftpserver.proto_cmds" global dictionary but on
   "ftphandler.FTPHandler.proto_cmds" instead.

 * FTPHandler class has 3 new methods:
   on_incomplete_file_sent()
   on_incomplete_file_received()
   on_login()

 * Added a new package in pyftpdlib namespace: "contrib". Modules defined here:
   pyftpdlib.contrib.handlers.py
   pyftpdlib.contrib.authorizers.py 

 * AbstractedFS class has 3 new methods: 
   get_user_by_uid()
   get_group_by_gid()
   readlink()


Version: 0.5.2 - Date: 2009-09-14
---------------------------------

Enhancements:

 * Issue #103: added unix_daemon.py script.

 * Issue #108: a new ThrottledDTPHandler class has been added for limiting the
   speed of downloads and uploads.

Bugfixes:

 * Issue #100: fixed a race condition in FTPHandler constructor which could
   throw an exception in case of connection bashing (DoS).  (thanks Bram Neijt)

 * Issue #102: FTPServer.close_all() now removes any unfired delayed call left
   behind to prevent potential memory leaks.
